--- a/src/components/MainPlataforma/MainPlataforma.css
+++ b/src/components/MainPlataforma/MainPlataforma.css
@@ -1,98 +1,95 @@
 @import url('../../styles/fonte.css');
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 2em 0;
-}
-
-.header-responsivo {
+.PlataformaHeader {
     display: flex;
     align-items: center;
 }
 
-.logo {
+.PlataformaHeaderlogo {
     width: 20vh;
     margin: 2em 2em 2em 2em;
 }
 
-.logo img {
+.PlataformaHeaderlogo img {
     width: 100%;
     height: 100%;
 }
 
-.nome-video {
+.PlataformaTitulo {
     margin-left: 3em;
     font-weight: bold;
     width: 88.5vh;
     font-size: 20px;
 }
 
-main {
+.PlataformaMain {
     display: flex;
     overflow-x: hidden;
 }
 
-#nav {
+.PlataformaBarraLateral {
     width: 15vw;
-}
-
-.barra-lateral {
     background-color: #fff;
     border: 1px solid #000000;
     border-left: 0px;
     border-bottom: 0px;
-    height: 100%;
 }
 
-.barra-lateral-videos a {
+.PlataformaBarraLateralVideos a {
     cursor: pointer;
 }
 
-.barra-lateral-videos a:hover {
+.PlataformaBarraLateralVideos a:hover {
     color: #2093BF;
 }
 
-.barra-lateral-videos {
+.PlataformaBarraLateralVideos {
     display: flex;
     align-items: center;
     margin: 2em;
     font-weight: bold;
 }
 
-.barra-lateral-videos p {
+.PlataformaBarraLateralVideos p {
     margin-left: 9px;
     font-size: 12px;
 }
 
-.video-plataforma {
+.PlataformaVideo {
     width: 85vw;
 }
 
-.video-yt {
+.PlataformaVideoIframe {
     background-image: linear-gradient(to bottom, #2093BF, #FFFFFF);
     text-align: center;
     width: 100%;
 }
 
-.video-yt iframe {
+.PlataformaVideoIframe iframe {
     width: 90%;
     margin: 2em;
     height: 58vh;
 }
 
-.video-nav {
+.PlataformaContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 2em 0;
+}
+
+.PlataformaVideoNav {
     margin: 0 20px 0 20px;
     justify-content: center;
     width: 100vw;
 }
 
-.video-nav hr {
+.PlataformaVideoNav hr {
     margin: 0 0 20px 0;
+    border: 1px solid #000;
 }
 
-.video-transcrito {
+.PlataformaVideoTranscrito {
     font-size: 15px;
     padding: 2em;
     height: 700px;
@@ -103,12 +100,13 @@ main {
     overflow: auto;
 }
 
-.desactived {
-    display: none;
+.PlataformaVideoTranscrito h3 {
+    text-align: center;
+    margin-bottom: 15px;
 }
 
-.cor-texto {
-    color: black;
+.Desactived {
+    display: none;
 }
 
 .active{
