--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,9 +16,81 @@
     margin: 0 100px 0 0;
 }
 
-.header-menu li {
+.header-menu a {
     margin: 0 10px;
     color: #000;
     font-size: 18px;
     font-weight: bold;
+}
+
+.active {
+    margin-right: 0 !important;
+}
+
+.menu-mobile img{
+  cursor: pointer;
+}
+
+.menu-mobile .menu-hamburguer{
+  background-color: #F4F5F6;
+  display: flex;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 250px;
+  padding: 30px;
+  margin-right: -100vw;
+  transition: margin .5s ease;
+}
+
+
+.menu-hamburguer-close{
+    width: 40px;
+    height: 100vh;
+}
+
+
+
+.menu-hamburguer-close img{
+    width: 26px;
+    cursor: pointer;
+}
+
+.menu-mobile .menu-hamburguer-links{
+    width: 100%;
+}
+
+.menu-mobile .menu-hamburguer-links ul {
+  list-style: none;
+  text-decoration: none;
+}
+
+.menu-mobile .menu-hamburguer-links li{
+    margin: 20px 0;
+    width: 100%;
+    display: flex;
+    font-size: 1.25rem;
+    align-items: center;
+    justify-content: center;
+}
+.menu-hamburguer a {
+  color: #000;
+}
+
+.menu-mobile .menu-mobile ul {
+  width: 1000px;
+}
+
+@media screen and (max-width: 600px) {
+    .header-nav-links {
+      display: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+  .menu-mobile {
+    display: none;
+  }
+  
 }
